first machine learning project

--- a/HousingWithHist.ipynb
+++ b/HousingWithHist.ipynb
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119ae7d68>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1136b6780>"
       ]
      },
      "execution_count": 8,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11f524908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x118a8d8d0>"
       ]
      },
      "execution_count": 12,
@@ -520,7 +520,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11f645828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x118badb38>"
       ]
      },
      "execution_count": 13,
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11fbc0e48>"
+       "<matplotlib.legend.Legend at 0x119109b70>"
       ]
      },
      "execution_count": 14,
@@ -656,22 +656,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1184b7ba8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a8fb38>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a3a668>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119da1668>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1197d8208>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119b72630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119924240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d53438>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119d537b8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11fbfc6d8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119b6bc50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119c3e208>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119c50780>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d5ccf8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d4c2b0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ae2828>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1134640b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11310ceb8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11337ca58>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11353c5c0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x113424dd8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113579ac8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11340ef60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113390be0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x113390c18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1136796d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113681c50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1133a8208>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1133ac780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11362dcf8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1134312b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113445828>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "0.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,18 +1272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [68068.37899436 68362.44350526 71090.21111639 69075.68829058\n",
-      " 70523.56422419 74408.95822172 71233.38643916 71344.98396303\n",
-      " 77859.6421214  68984.78931911]\n",
-      "Mean: 71095.20461952002\n",
-      "Standard Deviation: 2868.9512871623233\n"
+      "Scores: [68417.10526007 68043.04588026 70400.38749593 68414.51581703\n",
+      " 71397.09676234 75624.01998831 68907.42024127 70772.54079022\n",
+      " 76911.49029943 70202.79535741]\n",
+      "Mean: 70909.04178922572\n",
+      "Standard Deviation: 2897.02571252561\n"
      ]
     }
    ],
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1335,10 +1335,10 @@
     {
      "data": {
       "text/plain": [
-       "22447.523962955336"
+       "22120.233205818688"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,18 +1355,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [52356.30022086 50994.1469897  52774.00029495 54798.22930037\n",
-      " 52337.37217142 57380.66535184 51624.44638716 51154.49538836\n",
-      " 54880.92455788 53347.18645689]\n",
-      "Mean: 53164.776711944505\n",
-      "Standard Deviation: 1898.3345791952336\n"
+      "Scores: [52809.97510515 51099.27270371 52364.51188314 54589.19335612\n",
+      " 51580.13710915 56398.98319908 52715.5778594  52039.94675732\n",
+      " 55104.1238018  52300.69636543]\n",
+      "Mean: 53100.24181403\n",
+      "Standard Deviation: 1611.3915824042124\n"
      ]
     }
    ],
@@ -1374,6 +1374,117 @@
     "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_label, scoring=\"neg_mean_squared_error\", cv=10)\n",
     "forest_rmse_scores = np.sqrt(-forest_scores)\n",
     "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators='warn', n_jobs=None,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid=[{'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]}, {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring='neg_mean_squared_error', verbose=0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]}\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 6, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.30280938e-02, 6.89093748e-02, 4.28447704e-02, 1.71353690e-02,\n",
+       "       1.61691283e-02, 1.67605117e-02, 1.65829976e-02, 3.26127216e-01,\n",
+       "       6.61959253e-02, 1.11652981e-01, 7.14781272e-02, 6.34279778e-03,\n",
+       "       1.60006089e-01, 5.06744954e-05, 1.99681470e-03, 4.71912896e-03])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47840.46871691058"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "x_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "x_test_prepared = full_pipeline.transform(x_test)\n",
+    "final_predictions = final_model.predict(x_test_prepared)\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "final_rmse"
    ]
   },
   {
